--- a/.travis.yml
+++ b/.travis.yml
@@ -20,14 +20,15 @@ jobs:
         mariadb: '10.2'
       install: skip
       before_script:
+        - chmod +x gradlew
         - mysql -uroot < databases/create_databases.sql
         - ./gradlew testMigrate
       script:
         - APPLICATION=allocations
         - ./gradlew clean :applications:${APPLICATION}-server:build
       before_deploy:
-        - git config --local user.name "Travis CI"
-        - git config --local user.email "travis@example.com"
+        - git config --local user.name "carltonvaz"
+        - git config --local user.email "cvaz95@hotmail.com"
         - git tag -f $RELEASE_TAG
       deploy: &github
         provider: releases
@@ -44,14 +45,15 @@ jobs:
         mariadb: '10.2'
       install: skip
       before_script:
+        - chmod +x gradlew
         - mysql -uroot < databases/create_databases.sql
         - ./gradlew testMigrate
       script:
         - APPLICATION=backlog
         - ./gradlew clean :applications:${APPLICATION}-server:build
       before_deploy:
-        - git config --local user.name "Travis CI"
-        - git config --local user.email "travis@example.com"
+        - git config --local user.name "carltonvaz"
+        - git config --local user.email "cvaz95@hotmail.com"
         - git tag -f $RELEASE_TAG
       deploy:
         <<: *github
@@ -64,14 +66,15 @@ jobs:
         mariadb: '10.2'
       install: skip
       before_script:
+        - chmod +x gradlew
         - mysql -uroot < databases/create_databases.sql
         - ./gradlew testMigrate
       script:
         - APPLICATION=registration
         - ./gradlew clean :applications:${APPLICATION}-server:build
       before_deploy:
-        - git config --local user.name "Travis CI"
-        - git config --local user.email "travis@example.com"
+        - git config --local user.name "carltonvaz"
+        - git config --local user.email "cvaz95@hotmail.com"
         - git tag -f $RELEASE_TAG
       deploy:
         <<: *github
@@ -84,14 +87,15 @@ jobs:
         mariadb: '10.2'
       install: skip
       before_script:
+        - chmod +x gradlew
         - mysql -uroot < databases/create_databases.sql
         - ./gradlew testMigrate
       script:
         - APPLICATION=timesheets
         - ./gradlew clean :applications:${APPLICATION}-server:build
       before_deploy:
-        - git config --local user.name "Travis CI"
-        - git config --local user.email "travis@example.com"
+        - git config --local user.name "carltonvaz"
+        - git config --local user.email "cvaz95@hotmail.com"
         - git tag -f $RELEASE_TAG
       deploy:
         <<: *github
@@ -101,7 +105,7 @@ jobs:
       language: bash
       script:
         - echo "Downloading allocations server $RELEASE_TAG"
-        - wget -P applications/allocations-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed/releases/download/$RELEASE_TAG/allocations-server.jar
+        - wget -P applications/allocations-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed-practice/releases/download/$RELEASE_TAG/allocations-server.jar
       before_deploy:
         - cp manifest-allocations.yml manifest.yml
         - echo "Deploying allocations server $RELEASE_TAG"
@@ -117,7 +121,7 @@ jobs:
       language: bash
       script:
         - echo "Downloading backlog server $RELEASE_TAG"
-        - wget -P applications/backlog-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed/releases/download/$RELEASE_TAG/backlog-server.jar
+        - wget -P applications/backlog-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed-practice/releases/download/$RELEASE_TAG/backlog-server.jar
       before_deploy:
         - cp manifest-backlog.yml manifest.yml
         - echo "Deploying backlog server $RELEASE_TAG"
@@ -128,7 +132,7 @@ jobs:
       language: bash
       script:
         - echo "Downloading registration server $RELEASE_TAG"
-        - wget -P applications/registration-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed/releases/download/$RELEASE_TAG/registration-server.jar
+        - wget -P applications/registration-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed-practice/releases/download/$RELEASE_TAG/registration-server.jar
       before_deploy:
         - cp manifest-registration.yml manifest.yml
         - echo "Deploying registration server $RELEASE_TAG"
@@ -139,7 +143,7 @@ jobs:
       language: bash
       script:
         - echo "Downloading timesheets server $RELEASE_TAG"
-        - wget -P applications/timesheets-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed/releases/download/$RELEASE_TAG/timesheets-server.jar
+        - wget -P applications/timesheets-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed-practice/releases/download/$RELEASE_TAG/timesheets-server.jar
       before_deploy:
         - cp manifest-timesheets.yml manifest.yml
         - echo "Deploying timesheets server $RELEASE_TAG"
@@ -152,6 +156,8 @@ jobs:
         - echo "deb https://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
         - sudo apt-get update
         - sudo apt-get install cf-cli
+      before_script:
+        - chmod +x gradlew
       script:
         - cf login -a $CF_API_URL -u $CF_USERNAME -p $CF_PASSWORD -o $CF_ORG -s $CF_SPACE
         - ./gradlew cfMigrate
