--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -3,7 +3,7 @@ applications:
   path: ./applications/backlog-server/build/libs/backlog-server.jar
   routes:
   - route: backlog-pal-tracker-distributed-dumbo-octopus.cfapps.io
-  memory: 1G
+  memory: 499M
   instances: 1
   env:
     REGISTRATION_SERVER_ENDPOINT: registration-pal-tracker-distributed-dumbo-octopus.cfapps.io
