--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -3,7 +3,7 @@ applications:
   path: ./applications/timesheets-server/build/libs/timesheets-server.jar
   routes:
   - route: timesheets-pal-tracker-distributed-dumbo-octopus.cfapps.io
-  memory: 1G
+  memory: 499M
   instances: 1
   env:
     REGISTRATION_SERVER_ENDPOINT: registration-pal-tracker-distributed-dumbo-octopus.cfapps.io
